--- a/create.html
+++ b/create.html
@@ -1750,7 +1750,7 @@
         render(); 
     }
 
-    function addFrame() { saveState(); frames.push({ layers: [], background: '#ffffff' }); currentIdx = frames.length - 1; render(); }
+    function addFrame() { saveState(); frames.push({ layers: [], background: '#ffffff', _ratio: canvasRatio || { w: 1, h: 1 } }); currentIdx = frames.length - 1; render(); }
     function nextFrame() { if (currentIdx < frames.length - 1) { currentIdx++; render(); } else addFrame(); }
     function prevFrame() { if (currentIdx > 0) { currentIdx--; render(); } }
     function goToFrame(idx) { currentIdx = idx; render(); }
@@ -2172,6 +2172,8 @@
         onionCanvas.setAttribute('height', ch);
         onionCanvas.style.width  = cw + 'px';
         onionCanvas.style.height = ch + 'px';
+        // Stamp ratio onto every frame so it travels with published/draft data
+        frames.forEach(f => { f._ratio = { w, h }; });
         render();
     }
 
