--- a/discover.html
+++ b/discover.html
@@ -1050,7 +1050,9 @@ async function openPopup(id) {
   readBtn.innerHTML = prog ? '▶ Continue' : '▶ Read Now';
   readBtn.onclick = () => {
     closePopup();
-    location.href = 'reader.html?id=' + encodeURIComponent(c.id);
+    const ratioParam = c.canvas_ratio?.w && c.canvas_ratio?.h
+      ? `&ratio=${c.canvas_ratio.w}:${c.canvas_ratio.h}` : '';
+    location.href = 'reader.html?id=' + encodeURIComponent(c.id) + ratioParam;
   };
   btns.appendChild(readBtn);
 
